<resources>
    <string name="app_name">Gasto de viagem</string>
    <string name="distancia">Distância</string>
    <string name="preco">Preço</string>
    <string name="preco_por_litro">Preço por litro</string>
    <string name="total_de_quilometros">Total de quilômetros</string>
    <string name="autonomia">Autonomia</string>
    <string name="gasto_total">Seu gasto total será de:</string>
    <string name="calcular">Calcular</string>
    <string name="valor_total_rs">R$ 0</string>
    <string name="km_l">Km/L</string>
    <string name="preencha_todos_campos">Preenche todos os campos</string>
    <string name="valores_validos">Informe valores válidos</string>
</resources>
